--- a/icingaexchange.yml
+++ b/icingaexchange.yml
@@ -8,6 +8,15 @@ type: Plugin
 license: gplv3
 releases:
   -
+    name: 1.3.0
+    description: "1.3.0 Release"
+    files:
+      -
+        name: check_pakfire.py
+        url: "file:///check_pakfire.py"
+        description: "Release 1.3.0"
+        checksum: 6fa2b2b64c3d0b8d6e5c44a50c25f70c
+  -
     name: 1.2.1
     description: "1.2.1 Release"
     files:
